# PeptidePropertyPredictor

./: CHANGES.md  README.md  pyproject.toml  requirements.txt  simple_app.py  simple_app_im.py  try_train.py
pages/: train.py
src/peptide_property_predictor/: __init__.py  df_processing.py  model.py  predict.py  preprocessing.py  sequence_processing.py  train.py  utils.py
src/peptide_property_predictor/models/: small_rt.h5
tests/: test_df_processing.py  test_property_predictor.py  test_sequence_processing.py
