[build-system]
requires = ["setuptools"]

[project]
name = "peptide_property_predictor"
authors = [
    {name = "Patrick Garrett", email = "pgarrett@scripps.edu"},
]
description = "A very simple peptide property predictor."
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    'pandas',
    'scikit-learn',
    'tensorflow',
    'filterframes',
    'numpy',
    'matplotlib'
]

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you do NOT need to include the following line.
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"peptide_property_predictor.models" = ["*.h5"]

[tool.setuptools.dynamic]
version = {attr = "peptide_property_predictor.__version__"}

[project.urls]
repository = "https://github.com/pgarrett-scripps/PeptidePropertyPredictor.git"

[tool.pylint]
max-line-length = 120
fail-under = 9.5
good-names = ["db", "ax", 'r']
extension-pkg-whitelist='pydantic'
disable = "E0401"
